@@ -1,3 +1,8 @@
+2001-03-20  Bruno Haible  <haible@clisp.cons.org>
+
+	* compiler.lisp (compile-file-pathname-helper): Rewritten. Obey
+	output-file's directory even if it is a relative directory.
+
 2001-03-19  Bruno Haible  <haible@clisp.cons.org>
 
 	* pathname.d (find_executable): Use strcpy instead of sprintf.
